--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kata Un</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Phudu:wght@300..900&family=Playwrite+IN:wght@100..400&display=swap" 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Phudu:wght@300..900&family=Playwrite+IN:wght@100..400&display=swap"
         rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
@@ -15,9 +16,14 @@
 <body>
     <h1>Mes citations</h1>
 
+    <div>
+        <img class="image"
+            src="https://previews.123rf.com/images/enterline/enterline1601/enterline160100623/50435296-le-mot-citations-%C3%A9crit-en-sale-letterpress-type-vintage-sur-un-fond-en-bois-vieilli.jpg">
+    </div>
+
     <h2>Gestionnaire de citations en ligne</h2>
 
-    <h3>0 citations</h3>
+    <h3 id="quoteCount">0 citations</h3>
 
     <br>
 
@@ -33,11 +39,11 @@
     <form id="quoteCreation" action="" method="POST">
         <label for="nom">Citation</label>
         <input type="text" id="citation" name="citation" required>
-        
+
         <label for="nom">Nom de l'auteur.trice</label>
         <input type="text" id="name" name="name" required>
-      
-        <button type="submit" class="submit">Soumettre</button>
+
+        <button type="submit" id="submit" class="submit">Soumettre</button>
     </form>
 
 
@@ -46,6 +52,7 @@
 
 
     <script src="script.js"></script>
+
 </body>
 
 </html>
